--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -51,7 +51,7 @@
 
 // Default Element Page
 	@import 'blog_page';
-	@import 'contact';
+	@import 'forms';
 	@import 'bradcam';
 	@import 'extend';
 	@import 'elements';
