Ajout d'un lien vers la connexion pour Prendre un RDV

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,7 +62,7 @@
                                         </nav>
                                     </div>
                                     <div class="header-right-btn f-right d-none d-lg-block ml-15">
-                                        <a href="#" class="btn header-btn">Prendre RDV</a>
+                                        <a href="{{ path('app_login')}}" class="btn header-btn">Prendre RDV</a>
                                     </div>
                                 </div>
                             </div>   
