--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -85,6 +85,10 @@
   // button{
   //   border: 0;
   // }
+
+  .genric-btn.link {
+    font-size: 1.8em;
+  }
 }
 
 /*=================== form end ====================*/
