--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}Projet Musicothérapie{% endblock %}</title>
+        <title>{% block title %}{% if page_title %}{{ page_title }} - {% endif %}Projet Musicothérapie{% endblock %}</title>
 
         <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
