--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,3 +1,4 @@
+{% set page_title = "Se connecter" %}
 {% extends 'base.html.twig' %}
 
 {% block body %}
@@ -17,11 +18,11 @@
 
                 <h1 class="col-12 text-heading">Connectez-vous</h1>
 
-                <div class="form-group col-12">
+                <div class="form-group">
                     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control valid" placeholder="Votre adresse e-mail" required autofocus>
                 </div>
 
-                <div class="form-group col-12">
+                <div class="form-group">
                     <input type="password" name="password" id="inputPassword" class="form-control valid" placeholder="Votre mot de passe" required>
                 </div>
 
@@ -38,6 +39,8 @@
                 <button class="btn btn-lg btn-primary col-12" type="submit">
                     Se connecter
                 </button>
+
+                <a class="genric-btn link col-12" href="{{ path('app_register')}}" >S'inscrire</a>
             </form>
         </div>
     </div>
