Formulaires de connexion et d'inscription fonctionnels

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4943,7 +4943,7 @@ hr {
   border-radius: 0px;
   height: 100% !important;
 }
-.form .genric-btn.link {
+.form .other-text {
   font-size: 1.8em;
 }
 
