--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,36 +11,39 @@
                 {% endif %}
 
                 {% if app.user %}
-                    <div class="col-12">
-                        You êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                    <div class="other-text col-12">
+                        Vous êtes connecté en tant que {{ app.user.firstName }} {{ app.user.lastName }}  ({{ app.user.username }}).<br>
+                        <a class="genric-btn link" href="{{ path('app_logout') }}">Se déconnecter</a>
                     </div>
+                
+                {% else %}
+
+                    <h1 class="col-12 text-heading">Connectez-vous</h1>
+
+                    <div class="form-group">
+                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control valid" placeholder="Votre adresse e-mail" required autofocus>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="password" name="password" id="inputPassword" class="form-control valid" placeholder="Votre mot de passe" required>
+                    </div>
+
+                    <input type="hidden" name="_csrf_token"
+                        value="{{ csrf_token('authenticate') }}"
+                    >
+
+                    <div class="checkbox mb-3">
+                        <label>
+                            <input type="checkbox" name="_remember_me"> Se souvenir de moi
+                        </label>
+                    </div>
+
+                    <button class="btn btn-lg btn-primary col-12" type="submit">
+                        Se connecter
+                    </button>
+
+                    <a class="other-text genric-btn link col-12" href="{{ path('app_register')}}" >S'inscrire</a>
                 {% endif %}
-
-                <h1 class="col-12 text-heading">Connectez-vous</h1>
-
-                <div class="form-group">
-                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control valid" placeholder="Votre adresse e-mail" required autofocus>
-                </div>
-
-                <div class="form-group">
-                    <input type="password" name="password" id="inputPassword" class="form-control valid" placeholder="Votre mot de passe" required>
-                </div>
-
-                <input type="hidden" name="_csrf_token"
-                    value="{{ csrf_token('authenticate') }}"
-                >
-
-                <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" name="_remember_me"> Se souvenir de moi
-                    </label>
-                </div>
-
-                <button class="btn btn-lg btn-primary col-12" type="submit">
-                    Se connecter
-                </button>
-
-                <a class="genric-btn link col-12" href="{{ path('app_register')}}" >S'inscrire</a>
             </form>
         </div>
     </div>
