Push rapide pour correction d'erreur en local

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
-                                    <a href="index.html"><img src="{{ asset('img/logo/logo.png') }}" alt="logo" height="70px"></a>
+                                    <a href="{{ path('home') }}"><img src="{{ asset('img/logo/logo.png') }}" alt="logo" height="70px"></a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10 col-md-10">
