Correction de bugs de routing

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
                                     <div class="main-menu f-right d-none d-lg-block">
                                         <nav> 
                                             <ul id="navigation">
-                                                <li><a href="{{ path('index')}}">Accueil</a></li>
+                                                <li><a href="{{ path('home')}}">Accueil</a></li>
                                                 <li><a href="{{ path('about')}}">À propos</a></li>
                                                 <li><a href="{{ path('services')}}">Services</a></li>
                                                 <li><a href="{{ path('contact')}}">Contact</a></li>
