--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -77,14 +77,14 @@
     }
   }
 
+  .alert {
+    font-size: 1.6em;
+  }
+
   textarea{
     border-radius: 0px;
     height: 100% !important;
   }
-
-  // button{
-  //   border: 0;
-  // }
 
   .other-text {
     font-size: 1.8em;
