--- a/public/css/animated-headline.css
+++ b/public/css/animated-headline.css
@@ -18,7 +18,6 @@ html {
   font-size: 62.5%;
 }
 
-
 a {
   text-decoration: none;
 }
@@ -29,10 +28,12 @@ a {
   line-height: 230px;
   text-align: center;
 }
+
 .cd-title h1 {
   font-size: 2.4rem;
   font-weight: 700;
 }
+
 @media only screen and (min-width: 768px) {
   .cd-title {
     line-height: 250px;
@@ -43,11 +44,11 @@ a {
     height: 200px;
     line-height: 300px;
   }
+
   .cd-title h1 {
     font-size: 3rem;
   }
 }
-
 .cd-intro {
   width: 90%;
   max-width: 768px;
@@ -57,6 +58,7 @@ a {
 .cd-intro {
   margin: 4em auto;
 }
+
 @media only screen and (min-width: 768px) {
   .cd-intro {
     margin: 5em auto;
@@ -67,11 +69,11 @@ a {
     margin: 6em auto;
   }
 }
-
 .cd-headline {
   font-size: 3rem;
   line-height: 1.2;
 }
+
 @media only screen and (min-width: 768px) {
   .cd-headline {
     font-size: 4.4rem;
@@ -83,12 +85,12 @@ a {
     font-size: 6rem;
   }
 }
-
 .cd-words-wrapper {
   display: inline-block;
   position: relative;
   text-align: left;
 }
+
 .cd-words-wrapper b {
   display: inline-block;
   position: absolute;
@@ -96,12 +98,15 @@ a {
   left: 0;
   top: 0;
 }
+
 .cd-words-wrapper b.is-visible {
   position: relative;
 }
+
 .no-js .cd-words-wrapper b {
   opacity: 0;
 }
+
 .no-js .cd-words-wrapper b.is-visible {
   opacity: 1;
 }
@@ -116,6 +121,7 @@ xrotate-1
   -moz-perspective: 300px;
   perspective: 300px;
 }
+
 .cd-headline.rotate-1 b {
   opacity: 0;
   -webkit-transform-origin: 50% 100%;
@@ -129,6 +135,7 @@ xrotate-1
   -o-transform: rotateX(180deg);
   transform: rotateX(180deg);
 }
+
 .cd-headline.rotate-1 b.is-visible {
   opacity: 1;
   -webkit-transform: rotateX(0deg);
@@ -140,6 +147,7 @@ xrotate-1
   -moz-animation: cd-rotate-1-in 1.2s;
   animation: cd-rotate-1-in 1.2s;
 }
+
 .cd-headline.rotate-1 b.is-hidden {
   -webkit-transform: rotateX(180deg);
   -moz-transform: rotateX(180deg);
@@ -286,9 +294,10 @@ xtype
   vertical-align: top;
   overflow: hidden;
 }
+
 .cd-headline.type .cd-words-wrapper::after {
   /* vertical bar */
-  content: '';
+  content: "";
   position: absolute;
   right: 0;
   top: 50%;
@@ -302,30 +311,38 @@ xtype
   width: 1px;
   background-color: #aebcb9;
 }
+
 .cd-headline.type .cd-words-wrapper.waiting::after {
   -webkit-animation: cd-pulse 1s infinite;
   -moz-animation: cd-pulse 1s infinite;
   animation: cd-pulse 1s infinite;
 }
+
 .cd-headline.type .cd-words-wrapper.selected {
   background-color: #aebcb9;
 }
+
 .cd-headline.type .cd-words-wrapper.selected::after {
   visibility: hidden;
 }
+
 .cd-headline.type .cd-words-wrapper.selected b {
   color: #0d0d0d;
 }
+
 .cd-headline.type b {
   visibility: hidden;
 }
+
 .cd-headline.type b.is-visible {
   visibility: visible;
 }
+
 .cd-headline.type i {
   position: absolute;
   visibility: hidden;
 }
+
 .cd-headline.type i.in {
   position: relative;
   visibility: visible;
@@ -395,14 +412,17 @@ xrotate-2
   -moz-perspective: 300px;
   perspective: 300px;
 }
+
 .cd-headline.rotate-2 i, .cd-headline.rotate-2 em {
   display: inline-block;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .cd-headline.rotate-2 b {
   opacity: 0;
 }
+
 .cd-headline.rotate-2 i {
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
@@ -416,19 +436,23 @@ xrotate-2
   transform: translateZ(-20px) rotateX(90deg);
   opacity: 0;
 }
+
 .is-visible .cd-headline.rotate-2 i {
   opacity: 1;
 }
+
 .cd-headline.rotate-2 i.in {
   -webkit-animation: cd-rotate-2-in 0.4s forwards;
   -moz-animation: cd-rotate-2-in 0.4s forwards;
   animation: cd-rotate-2-in 0.4s forwards;
 }
+
 .cd-headline.rotate-2 i.out {
   -webkit-animation: cd-rotate-2-out 0.4s forwards;
   -moz-animation: cd-rotate-2-out 0.4s forwards;
   animation: cd-rotate-2-out 0.4s forwards;
 }
+
 .cd-headline.rotate-2 em {
   -webkit-transform: translateZ(20px);
   -moz-transform: translateZ(20px);
@@ -445,6 +469,7 @@ xrotate-2
   transform: rotateX(0deg);
   opacity: 0;
 }
+
 .no-csstransitions .cd-headline.rotate-2 i em {
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
@@ -572,15 +597,17 @@ xloading-bar
 -------------------------------- */
 .cd-headline.loading-bar span {
   display: inline-block;
-  padding: .2em 0;
+  padding: 0.2em 0;
 }
+
 .cd-headline.loading-bar .cd-words-wrapper {
   overflow: hidden;
   vertical-align: top;
 }
+
 .cd-headline.loading-bar .cd-words-wrapper::after {
   /* loading bar */
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: 0;
@@ -592,19 +619,22 @@ xloading-bar
   -moz-transition: width 0.3s -0.1s;
   transition: width 0.3s -0.1s;
 }
+
 .cd-headline.loading-bar .cd-words-wrapper.is-loading::after {
   width: 100%;
   -webkit-transition: width 3s;
   -moz-transition: width 3s;
   transition: width 3s;
 }
+
 .cd-headline.loading-bar b {
-  top: .2em;
+  top: 0.2em;
   opacity: 0;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
+
 .cd-headline.loading-bar b.is-visible {
   opacity: 1;
   top: 0;
@@ -617,16 +647,19 @@ xslide
 -------------------------------- */
 .cd-headline.slide span {
   display: inline-block;
-  padding: .2em 0;
+  padding: 0.2em 0;
 }
+
 .cd-headline.slide .cd-words-wrapper {
   overflow: hidden;
   vertical-align: top;
 }
+
 .cd-headline.slide b {
   opacity: 0;
-  top: .2em;
+  top: 0.2em;
 }
+
 .cd-headline.slide b.is-visible {
   top: 0;
   opacity: 1;
@@ -634,6 +667,7 @@ xslide
   -moz-animation: slide-in 0.6s;
   animation: slide-in 0.6s;
 }
+
 .cd-headline.slide b.is-hidden {
   -webkit-animation: slide-out 0.6s;
   -moz-animation: slide-out 0.6s;
@@ -755,15 +789,17 @@ xclip
 -------------------------------- */
 .cd-headline.clip span {
   display: inline-block;
-  padding: .2em 0;
+  padding: 0.2em 0;
 }
+
 .cd-headline.clip .cd-words-wrapper {
   overflow: hidden;
   vertical-align: top;
 }
+
 .cd-headline.clip .cd-words-wrapper::after {
   /* line */
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -771,9 +807,11 @@ xclip
   height: 100%;
   background-color: #aebcb9;
 }
+
 .cd-headline.clip b {
   opacity: 0;
 }
+
 .cd-headline.clip b.is-visible {
   opacity: 1;
 }
@@ -788,15 +826,18 @@ xzoom
   -moz-perspective: 300px;
   perspective: 300px;
 }
+
 .cd-headline.zoom b {
   opacity: 0;
 }
+
 .cd-headline.zoom b.is-visible {
   opacity: 1;
   -webkit-animation: zoom-in 0.8s;
   -moz-animation: zoom-in 0.8s;
   animation: zoom-in 0.8s;
 }
+
 .cd-headline.zoom b.is-hidden {
   -webkit-animation: zoom-out 0.8s;
   -moz-animation: zoom-out 0.8s;
@@ -889,9 +930,11 @@ xrotate-3
   -moz-perspective: 300px;
   perspective: 300px;
 }
+
 .cd-headline.rotate-3 b {
   opacity: 0;
 }
+
 .cd-headline.rotate-3 i {
   display: inline-block;
   -webkit-transform: rotateY(180deg);
@@ -902,6 +945,7 @@ xrotate-3
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .is-visible .cd-headline.rotate-3 i {
   -webkit-transform: rotateY(0deg);
   -moz-transform: rotateY(0deg);
@@ -909,11 +953,13 @@ xrotate-3
   -o-transform: rotateY(0deg);
   transform: rotateY(0deg);
 }
+
 .cd-headline.rotate-3 i.in {
   -webkit-animation: cd-rotate-3-in 0.6s forwards;
   -moz-animation: cd-rotate-3-in 0.6s forwards;
   animation: cd-rotate-3-in 0.6s forwards;
 }
+
 .cd-headline.rotate-3 i.out {
   -webkit-animation: cd-rotate-3-out 0.6s forwards;
   -moz-animation: cd-rotate-3-out 0.6s forwards;
@@ -1005,6 +1051,7 @@ xscale
 .cd-headline.scale b {
   opacity: 0;
 }
+
 .cd-headline.scale i {
   display: inline-block;
   opacity: 0;
@@ -1015,14 +1062,17 @@ xscale
   transform: scale(0);
   font-style: normal;
 }
+
 .is-visible .cd-headline.scale i {
   opacity: 1;
 }
+
 .cd-headline.scale i.in {
   -webkit-animation: scale-up 0.6s forwards;
   -moz-animation: scale-up 0.6s forwards;
   animation: scale-up 0.6s forwards;
 }
+
 .cd-headline.scale i.out {
   -webkit-animation: scale-down 0.6s forwards;
   -moz-animation: scale-down 0.6s forwards;
@@ -1142,12 +1192,14 @@ xpush
 .cd-headline.push b {
   opacity: 0;
 }
+
 .cd-headline.push b.is-visible {
   opacity: 1;
   -webkit-animation: push-in 0.6s;
   -moz-animation: push-in 0.6s;
   animation: push-in 0.6s;
 }
+
 .cd-headline.push b.is-hidden {
   -webkit-animation: push-out 0.6s;
   -moz-animation: push-out 0.6s;
@@ -1262,3 +1314,5 @@ xpush
     transform: translateX(100%);
   }
 }
+
+/*# sourceMappingURL=animated-headline.css.map */
