--- a/public/css/flaticon.css
+++ b/public/css/flaticon.css
@@ -1,33 +1,37 @@
-	/*
-  	Flaticon icon font: Flaticon
-  	Creation date: 13/05/2020 06:02
-  	*/
-
+@charset "UTF-8";
+/*
+ 	Flaticon icon font: Flaticon
+ 	Creation date: 13/05/2020 06:02
+ 	*/
 @font-face {
   font-family: "Flaticon";
   src: url("../fonts/Flaticon.eot");
-  src: url("../fonts/Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("../fonts/Flaticon.woff2") format("woff2"),
-       url("../fonts/Flaticon.woff") format("woff"),
-       url("../fonts/Flaticon.ttf") format("truetype"),
-       url("../fonts/Flaticon.svg#Flaticon") format("svg");
+  src: url("../fonts/Flaticon.eot?#iefix") format("embedded-opentype"), url("../fonts/Flaticon.woff2") format("woff2"), url("../fonts/Flaticon.woff") format("woff"), url("../fonts/Flaticon.ttf") format("truetype"), url("../fonts/Flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: "Flaticon";
     src: url("../fonts/Flaticon.svg#Flaticon") format("svg");
   }
 }
-
-[class^="flaticon-"]:before, [class*=" flaticon-"]:before,
-[class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
+[class^=flaticon-]:before, [class*=" flaticon-"]:before,
+[class^=flaticon-]:after, [class*=" flaticon-"]:after {
   font-family: Flaticon;
-font-style: normal;
+  font-style: normal;
 }
 
-.flaticon-healthcare-and-medical:before { content: "\f100"; }
-.flaticon-fitness:before { content: "\f101"; }
-.flaticon-clock:before { content: "\f102"; }
+.flaticon-healthcare-and-medical:before {
+  content: "";
+}
+
+.flaticon-fitness:before {
+  content: "";
+}
+
+.flaticon-clock:before {
+  content: "";
+}
+
+/*# sourceMappingURL=flaticon.css.map */
