--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,5 +1,6 @@
-{% set page_title = "S'inscrire" %}
 {% extends 'base.html.twig' %}
+
+{% block title %}{{ parent() }} | S'inscrire{% endblock %}
 
 {% block body %}
 <section class="form-section">
