--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,5 @@
-{% set page_title = "Se connecter" %}
 {% extends 'base.html.twig' %}
+{% block title %}{{ parent() }} | Se connecter{% endblock %}
 
 {% block body %}
 <section class="form-section">
