--- a/public/scss/_elements.scss
+++ b/public/scss/_elements.scss
@@ -326,82 +326,39 @@ del {
     background: #f9f9ff;
     padding: 15px 0px 30px 0px;
     min-width: 800px;
-    .serial {
-        width: 11.83%;
+    .date {
+        width: 33.3%;
         padding-left: 30px;
     }
-    .country {
-        width: 28.07%;
+    .hour {
+        width: 33.3%;
     }
-    .visit {
-        width: 19.74%;
-    }
-    .percentage {
-        width: 40.36%;
-        padding-right: 50px;
+    .select {
+        width: 33.3%;
     }
     .table-head {
         display: flex;
-        .serial,
-        .country,
-        .visit,
-        .percentage {
+        .date,
+        .hour,
+        .select {
             color: $title-color;
             line-height: 40px;
             text-transform: uppercase;
             font-weight: 500;
+            display: flex;
+            justify-content: center;
         }
     }
     .table-row {
         padding: 15px 0;
         border-top: 1px solid #edf3fd;
         display: flex;
-        .serial,
-        .country,
-        .visit,
-        .percentage {
+        .date,
+        .hour,
+        .select {
             display: flex;
             align-items: center;
-        }
-        .country {
-            img {
-                margin-right: 15px;
-            }
-        }
-        .percentage {
-            .progress {
-                width: 80%;
-                border-radius: 0px;
-                background: transparent;
-                .progress-bar {
-                    height: 5px;
-                    line-height: 5px;
-                    &.color-1 {
-                        background-color: #6382e6;
-                    }
-                    &.color-2 {
-                        background-color: #e66686;
-                    }
-                    &.color-3 {
-                        background-color: #f09359;
-                    }
-                    &.color-4 {
-                        background-color: #73fbaf;
-                    }
-                    &.color-5 {
-                        background-color: #73fbaf;
-                    }
-                    &.color-6 {
-                        background-color: #6382e6;
-                    }
-                    &.color-7 {
-                        background-color: #a367e7;
-                    }
-                    &.color-8 {
-                        background-color: #e66686;
-                    }
-                }
-            }
+            justify-content: center;
         }
     }
 }
