--- a/public/scss/_color.scss
+++ b/public/scss/_color.scss
@@ -16,6 +16,9 @@
 	$theme-color3: #f27420;
 	$theme-color4: #ff3500;
 
+// Textual logo color
+	$logo-color: #234821;
+
 // Body Font
 	$body-text-color: #0D210B;
 	$hr-border-color:#eceff8;
