--- a/public/scss/_headerMenu.scss
+++ b/public/scss/_headerMenu.scss
@@ -150,6 +150,13 @@
                 } 
             }
         }
+
+        .temporary-logo {
+            font-family: 'Dancing Script', cursive;
+            color: $logo-color;
+            font-size: 2.85rem;
+            user-select: none;
+        }
     }
 
 //! Mobile Menu
