--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -30,7 +30,7 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-7 col-lg-9 col-md-8">
                         <div class="wantToWork-caption wantToWork-caption2">
-                            <h2>Nos 2 services principaux</h2>
+                            <h2>Mes 2 services</h2>
                             <p>Initiez vous à la musicothérapie d'une manière adaptée à vos besoins !</p>
                         </div>
                     </div>
