--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -23,7 +23,7 @@
                                     <div class="hero__caption">
                                         <h1 data-animation="fadeInUp" data-delay=".3s">"La musique est la langue des émotions."</h1>
                                         <p data-animation="fadeInUp" data-delay=".6s">- Emmanuel Kant</p>
-                                       <!-- <a href="services.html" class="btn mt-2" data-animation="fadeInLeft" data-delay=".3s">Take a Service</a>-->
+                                        <a href="{{ path('services') }}" class="btn mt-2" data-animation="fadeInLeft" data-delay=".3s">Participer à mes ateliers</a>
                                     </div>
                                 </div>
                             </div>
@@ -64,69 +64,8 @@
             </div>
         </div>
         <!-- About-2 Area End -->
-        <section class="wantToWork-area section-bg3" data-background="assets/img/gallery/section_bg01.png">
-            <div class="container">
-                <div class="wants-wrapper w-padding2">
-                    <div class="row align-items-center justify-content-between">
-                        <div class="col-xl-7 col-lg-9 col-md-8">
-                            <div class="wantToWork-caption wantToWork-caption2">
-                                <h2>Happy mind <br>healthy life</h2>
-                                <p>Almost before we knew it, we<br> had left the ground</p>
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-md-4">
-                            <a href="services.html" class="btn f-right sm-left">Participer à mes ateliers</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--? Services Area Start -->
-        <div class="service-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <img src="assets/img/icon/services1.svg" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Physical Activity</a></h5>
-                                <p>Praesent porttitor, nulla vitae  posuere iaculis, arcu nisl dignissim dolor, a pretium mi  sem ut ipsum.</p>
-                                <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <img src="assets/img/icon/services2.svg" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Physical Activity</a></h5>
-                                <p>Praesent porttitor, nulla vitae  posuere iaculis, arcu nisl dignissim dolor, a pretium mi  sem ut ipsum.</p>
-                                <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <img src="assets/img/icon/services3.svg" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Physical Activity</a></h5>
-                                <p>Praesent porttitor, nulla vitae  posuere iaculis, arcu nisl dignissim dolor, a pretium mi  sem ut ipsum.</p>
-                                <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Services Area End -->
         <!--? Testimonial Area Start -->
-        <section class="testimonial-area testimonial-padding fix">
+        <section class="testimonial-area testimonial-padding fix  section-bg3" data-background="assets/img/gallery/section_bg01.png">
             <div class="container">
                 <div class="row align-items-center justify-content-center">
                     <div class=" col-lg-9">
