Correction erreur footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -162,7 +162,7 @@
                                 <div class="col-xl-10 ">
                                     <div class="footer-copy-right">
                                         <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous droits réservés | Site réalisé au sein de l'Université Paris I Panthéon-Sorbonne (DUTERTRE, LECONTE, LOSEGO, SHI)
+                                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous droits réservés | Site réalisé au sein de l'Université Paris I Panthéon-Sorbonne (DUTERTRE, LECONTE, LOSEGO)
                                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                                         </div>
                                     </div>
